feat(init) change to text-avatar name

--- a/projects/lib-basic-ui/src/lib/components/text-avatar/text-avatar.styles.scss
+++ b/projects/lib-basic-ui/src/lib/components/text-avatar/text-avatar.styles.scss
@@ -1,6 +1,6 @@
 $defaultColor: #62668c;
 
-.san-initials-container {
+.text-avatar-container {
   display: flex;
   justify-content: center;
   width: 100%;
