--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <bui-lib-basic-ui></bui-lib-basic-ui>
-<san-initials name="Rubén García de Longoria"></san-initials>
+<bui-text-avatar name="Rubén García de Longoria"></bui-text-avatar>
