--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
 <bui-lib-basic-ui></bui-lib-basic-ui>
-<bui-text-avatar name="Rubén García de Longoria"></bui-text-avatar>
+<bui-text-avatar
+  width="45px"
+  height="85px"
+  borderRadius="5px"
+  backColor="#000000"
+  textColor="FF0000"
+  text="Rubén García de Longoria"></bui-text-avatar>
