feat(init) text-avatar complete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,20 @@
 <bui-lib-basic-ui></bui-lib-basic-ui>
+
 <bui-text-avatar
-  width="45px"
-  height="85px"
-  borderRadius="5px"
-  backColor="#000000"
-  textColor="FF0000"
+  width="150px"
+  height="100px"
+  borderRadius="0 50px 0 50px"
   text="Rubén García de Longoria"></bui-text-avatar>
+
+<bui-text-avatar
+    width="100px"
+    height="100px"
+    [formatType]="textAvatarType.F_F"
+    text="Rubén García de Longoria"></bui-text-avatar>
+
+<bui-text-avatar
+    width="100px"
+    height="100px"
+    borderRadius="20px"
+    [formatType]="textAvatarType.F_F"
+    text="Rubén García de Longoria"></bui-text-avatar>
