feat(init) text-avatar complete with all features

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,17 @@
 <bui-text-avatar
     width="100px"
     height="100px"
+    text="Rubén"></bui-text-avatar>
+
+<bui-text-avatar
+    width="100px"
+    height="100px"
     borderRadius="20px"
-    [formatType]="textAvatarType.F_F"
+    text="Rubén García de Longoria"></bui-text-avatar>
+
+<bui-text-avatar
+    width="100px"
+    height="100px"
+    borderRadius="20px"
+    viewBox="0 0 1 60"
     text="Rubén García de Longoria"></bui-text-avatar>
