--- a/projects/lib-basic-ui/src/lib/components/text-avatar/text-avatar.template.html
+++ b/projects/lib-basic-ui/src/lib/components/text-avatar/text-avatar.template.html
@@ -1,7 +1,7 @@
 <section
   class="text-avatar-container"
   [ngStyle]="styleObject()">
-  <svg viewBox="0 0 30 30">
+  <svg [attr.viewBox]="viewBox">
     <g>
       <text
         x="50%" y="50%"
